--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,4 @@
 ---
 
 @import "jekyll-theme-slate";
+@import "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
