--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js" integrity="sha512-6FaAxxHuKuzaGHWnV00ftWqP3luSBRSopnNAA2RvQH1fOfnF/A1wOfiUWF7cLIOFcfb1dEhXwo5VG3DAisocRw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="icon", type="image/x-icon", href="figure/favicon.ico">
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
